fix(render/blockquote): fix blockquote text was rendered as gray in dark mode

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -1,9 +1,6 @@
 div.theme-default-content:not(.custom) {
     max-width: 100%;
 }
-html:not(.dark) blockquote {
-    color: #000;
-}
 blockquote {
     border-left: 4px solid #64b5f6;
     border-top: 1px solid #64b5f6;
